trunk/Archive2/51/ba83cd970df7d4/output
main.cpp:1:2: error: invalid preprocessing directive #!
 #!/bin/bash
  ^
main.cpp:11:25: fatal error: second_part.h: No such file or directory
 #include "second_part.h"
                         ^
compilation terminated.
